# comp0034-week6

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
activities/: activities.md  blueprints.md  configuration.md  coursework_getting_started.md
flask_app/: __init__.py  hello.py
src/flask_app/templates/: index.html
