[tool.poetry]
name = "comp0034-week6"
version = "0.1.0"
description = "COMP0034 Week 6 starter code and activities"
authors = ["Sarah Sanders <sarah.sanders@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.16"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
